--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tada",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://stasi815.github.io/TaDa-",
+  "homepage": "http://www.remotedevotion.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
